--- a/default_52.0.html
+++ b/default_52.0.html
@@ -102,32 +102,7 @@
 
   <!-- Row 1 Start -->
             <li>
-                <a href="#brand" data-toggle="modal" data-countrycode="BRAND">
-                    <figure><img src="img/brand/mercedes.jpg?w=120" alt="New Brand"></figure>
-                    <h3>Brand</h3></a>
-            </li>
-            <li>
-                <a href="#brand" data-toggle="modal" data-countrycode="BRAND">
-                    <figure><img src="img/brand/mercedes.jpg?w=120" alt="New Brand"></figure>
-                    <h3>Brand</h3></a>
-            </li>
-            <li>
-                <a href="#brand" data-toggle="modal" data-countrycode="BRAND">
-                    <figure><img src="img/brand/mercedes.jpg?w=120" alt="New Brand"></figure>
-                    <h3>Brand</h3></a>
-            </li>
-            <li>
-                <a href="#brand" data-toggle="modal" data-countrycode="BRAND">
-                    <figure><img src="img/brand/mercedes.jpg?w=120" alt="New Brand"></figure>
-                    <h3>Brand</h3></a>
-            </li>
-            <li>
-                <a href="#brand" data-toggle="modal" data-countrycode="BRAND">
-                    <figure><img src="img/brand/mercedes.jpg?w=120" alt="New Brand"></figure>
-                    <h3>Brand</h3></a>
-            </li>
-            <li>
-                <a href="#brand" data-toggle="modal" data-countrycode="BRAND">
+                <a href="#brand" data-toggle="modal" data-brand="toyota">
                     <figure><img src="img/brand/mercedes.jpg?w=120" alt="New Brand"></figure>
                     <h3>Brand</h3></a>
             </li>
